result/scope_test%20231229223957%/91%original%EvenOddPalindrome%isPalindrome%d1/1/temp/compile_error.txt
/home/minbao/PycharmProject/ChatUniTest-main/result/scope_test%20231229223957%/91%original%EvenOddPalindrome%isPalindrome%d1/1/temp/EvenOddPalindrome_91_1Test.java:12: error: isPalindrome(int) has private access in EvenOddPalindrome
        assertTrue(EvenOddPalindrome.isPalindrome(121));
                                    ^
/home/minbao/PycharmProject/ChatUniTest-main/result/scope_test%20231229223957%/91%original%EvenOddPalindrome%isPalindrome%d1/1/temp/EvenOddPalindrome_91_1Test.java:13: error: isPalindrome(int) has private access in EvenOddPalindrome
        assertTrue(EvenOddPalindrome.isPalindrome(12321));
                                    ^
/home/minbao/PycharmProject/ChatUniTest-main/result/scope_test%20231229223957%/91%original%EvenOddPalindrome%isPalindrome%d1/1/temp/EvenOddPalindrome_91_1Test.java:14: error: isPalindrome(int) has private access in EvenOddPalindrome
        assertFalse(EvenOddPalindrome.isPalindrome(12345));
                                     ^
/home/minbao/PycharmProject/ChatUniTest-main/result/scope_test%20231229223957%/91%original%EvenOddPalindrome%isPalindrome%d1/1/temp/EvenOddPalindrome_91_1Test.java:15: error: isPalindrome(int) has private access in EvenOddPalindrome
        assertTrue(EvenOddPalindrome.isPalindrome(1));
                                    ^
/home/minbao/PycharmProject/ChatUniTest-main/result/scope_test%20231229223957%/91%original%EvenOddPalindrome%isPalindrome%d1/1/temp/EvenOddPalindrome_91_1Test.java:16: error: isPalindrome(int) has private access in EvenOddPalindrome
        assertFalse(EvenOddPalindrome.isPalindrome(12));
                                     ^
5 errors
